# ai-gateway

./: .gitignore  Cargo.toml  README.md
metrics/: Dockerfile  README.md  docker-compose.yml  gateway.py  logs.jsonl  metrics.py  model_stats.py  nginx.conf  otel-collector-config.yaml  prometheus.yml  requirements.txt  router.py  telemetry.py
metrics/prometheus-data/01KVC90KSRWZ2VX1W7G1ACDE6V/: index  meta.json
metrics/prometheus-data/01KVC90KSRWZ2VX1W7G1ACDE6V/chunks/: 000001
metrics/prometheus-data/01KVE766M5518388WV0WN3ETMC/: index  meta.json
metrics/prometheus-data/01KVE766M5518388WV0WN3ETMC/chunks/: 000001
metrics/prometheus-data/01KVEHFSP8EV7VDMM2B3QWTHV6/: index  meta.json
metrics/prometheus-data/01KVEHFSP8EV7VDMM2B3QWTHV6/chunks/: 000001
metrics/prometheus-data/01KVK23FETZ1GSJJA6106XFCN0/: index  meta.json
metrics/prometheus-data/01KVK23FETZ1GSJJA6106XFCN0/chunks/: 000001
metrics/prometheus-data/01KVKCD75NBQ6G46S6GWQZ80PT/: index  meta.json
metrics/prometheus-data/01KVKCD75NBQ6G46S6GWQZ80PT/chunks/: 000001
metrics/prometheus-data/01KVKCD79WDDCGZ15P38E43VGV/: index  meta.json
metrics/prometheus-data/01KVKCD79WDDCGZ15P38E43VGV/chunks/: 000001
metrics/prometheus-data/01KVKDATE33FFMWXBDVQR6ZEXD/: index  meta.json
metrics/prometheus-data/01KVKDATE33FFMWXBDVQR6ZEXD/chunks/: 000001
metrics/prometheus-data/chunks_head/: 000003  000004  000005
metrics/prometheus-data/wal/: 00000019  00000020  00000021
metrics/prometheus-data/wal/checkpoint.00000018/: 00000000
src/: logger.rs  logs.jsonl  main.rs  metrics.rs  parser.rs
